# codex

./: AGENTS.md  CURRENT_STATE_CONNECTED_TUI.md  PROJECT_ENVIRONMENT_LOADING_IMPLEMENTATION_PLAN.md  README.md  bazel.nix  codex-dev  flake.nix  justfile  update.sh
codex-rs/: .gitignore  Cargo.toml  default.nix
codex-rs/project-env/: Cargo.toml
codex-rs/project-env/src/: lib.rs  project_env_tests.rs
docs/: CONNECTED_TUI_ENVIRONMENT.md  config.md
nix/: bundled-shell-tools.json
scripts/: sync-bundled-shell-tools.py
web/: .gitignore  AGENTS.md  README.md  flake.nix  index.html  package.json  pnpm-lock.yaml  runloop  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
wf_docs/: UPDATE_INSTRUCTIONS.md  project-environment-loading.md
wf_features/: active-view-terminal-titles.md  app-server-firehose-subscription.md  assistant-file-references-clickable.md  automatic-thread-title.md  bare-prompt-slash-command-warnings.md  clean-scrollback-toggle.md  connected-auto-reconnect.md  connected-footer-badge.md  copy-prior-transcript-response.md  copy-selected-transcript-prompt.md  copy-unsent-prompt-text.md  custom-build-version-labels.md  file-mentions-include-ignored-files.md  file-mentions-insert-code-spans.md  init-update-slash-command.md  local-shared-app-server.md  local-unix-socket-communication.md  note-to-self.md  packaged-common-binaries.md  project-environment-loading.md  session-persistence-retries.md  side-conversation-close-summary.md  trust-sandbox-approval-policy.md  tui-thread-archive.md  usage-cost-report.md  usage-limit-pace-indicator.md
(+449 files in other folders)
